--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/epiqo/recruiter_epiq_deps#readme",
   "dependencies": {
+    "es6-promise": "^3.1.2",
+    "gulp-shell": "^0.5.2",
     "coffee-script": "~1.10.0",
     "coffeelint": "~1.15.7",
     "criticalcss": "^1.0.3",
