--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "bugs": {
     "url": "https://github.com/epiqo/recruiter_epiq_deps/issues"
   },
+  "bin": {
+    "recruiter-epiq-deps": "./bin/recruiter-epiq-deps.js"
+  },
   "homepage": "https://github.com/epiqo/recruiter_epiq_deps#readme",
   "dependencies": {
     "es6-promise": "^3.1.2",
@@ -40,7 +43,8 @@
     "gulp-util": "~3.0.7",
     "kss": "~2.0.2",
     "tiny-lr": "~0.2.1",
-    "yargs": "~4.6.0"
+    "yargs": "~4.6.0",
+    "cross-spawn": "4.0.0"
   },
   "devDependencies": {
     "bundle-deps": "^1.0.0",
