fix(cli): Link bin command

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recruiter_epiq_deps",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Dependencies for the epiq theme in Recruiter distro",
   "main": "index.js",
   "scripts": {
@@ -43,8 +43,7 @@
     "gulp-util": "~3.0.7",
     "kss": "~2.0.2",
     "tiny-lr": "~0.2.1",
-    "yargs": "~4.6.0",
-    "cross-spawn": "4.0.0"
+    "yargs": "~4.6.0"
   },
   "devDependencies": {
     "bundle-deps": "^1.0.0",
