--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "recruiter_epiq_deps",
-  "version": "0.0.9",
+  "version": "0.0.12",
   "description": "Dependencies for the epiq theme in Recruiter distro",
   "main": "index.js",
   "scripts": {
     "commit": "git-cz",
     "prepublish": "bundle-deps",
     "build": "node scripts/build.js",
-    "images": "node scripts/images.js"
+    "images": "node scripts/images.js",
+    "styleguide": "node scripts/styleguide.js"
   },
   "repository": {
     "type": "git",
