--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   },
   "homepage": "https://github.com/epiqo/recruiter_epiq_deps#readme",
   "dependencies": {
-    "es6-promise": "^3.1.2",
-    "gulp-shell": "^0.5.2",
+    "chalk": "^1.1.3",
     "coffee-script": "~1.10.0",
     "coffeelint": "~1.15.7",
     "criticalcss": "^1.0.3",
+    "es6-promise": "^3.1.2",
     "gulp": "~3.9.1",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-changed": "~1.3.0",
@@ -43,6 +43,7 @@
     "gulp-replace-path": "^0.4.0",
     "gulp-rimraf": "~0.2.0",
     "gulp-sass": "^2.3.1",
+    "gulp-shell": "^0.5.2",
     "gulp-uglify": "~1.5.3",
     "gulp-util": "~3.0.7",
     "kss": "~2.0.2",
@@ -58,11 +59,11 @@
     "path": "node_modules/cz-conventional-changelog"
   },
   "bundledDependencies": [
-    "es6-promise",
-    "gulp-shell",
+    "chalk",
     "coffee-script",
     "coffeelint",
     "criticalcss",
+    "es6-promise",
     "gulp",
     "gulp-autoprefixer",
     "gulp-changed",
@@ -76,6 +77,7 @@
     "gulp-replace-path",
     "gulp-rimraf",
     "gulp-sass",
+    "gulp-shell",
     "gulp-uglify",
     "gulp-util",
     "kss",
