--- a/package.json
+++ b/package.json
@@ -29,13 +29,11 @@
     "chalk": "^1.1.3",
     "coffee-script": "~1.10.0",
     "coffeelint": "~1.15.7",
-    "criticalcss": "^1.0.3",
+    "critical": "^0.8.1",
     "es6-promise": "^3.1.2",
     "gulp": "~3.9.1",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-changed": "~1.3.0",
-    "gulp-coffee": "~2.3.2",
-    "gulp-coffeelint": "~0.6.0",
     "gulp-concat": "~2.6.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-imagemin": "~2.4.0",
@@ -63,13 +61,11 @@
     "chalk",
     "coffee-script",
     "coffeelint",
-    "criticalcss",
+    "critical",
     "es6-promise",
     "gulp",
     "gulp-autoprefixer",
     "gulp-changed",
-    "gulp-coffee",
-    "gulp-coffeelint",
     "gulp-concat",
     "gulp-cssmin",
     "gulp-imagemin",
