--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   "devDependencies": {
     "bundle-deps": "^1.0.0",
     "commitizen": "^2.8.6",
-    "cz-conventional-changelog": "^1.2.0"
+    "cz-conventional-changelog": "^1.2.0",
+    "prompt": "^1.0.0"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
