--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recruiter_epiq_deps",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "Dependencies for the epiq theme in Recruiter distro",
   "main": "index.js",
   "scripts": {
@@ -26,29 +26,28 @@
   "homepage": "https://github.com/epiqo/recruiter_epiq_deps#readme",
   "dependencies": {
     "chalk": "^1.1.3",
-    "critical": "^0.8.1",
-    "es6-promise": "^3.1.2",
-    "gulp": "~3.9.1",
-    "gulp-autoprefixer": "~3.1.0",
-    "gulp-changed": "~1.3.0",
-    "gulp-concat": "~2.6.0",
+    "critical": "^0.8.4",
+    "es6-promise": "^4.1.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-changed": "^2.0.0",
+    "gulp-concat": "~2.6.1",
     "gulp-cssmin": "^0.1.7",
-    "gulp-imagemin": "~3.1.1",
-    "gulp-livereload": "~3.8.1",
-    "gulp-rename": "~1.2.0",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
     "gulp-replace-path": "^0.4.0",
-    "gulp-rimraf": "~0.2.0",
-    "gulp-sass": "^3.0.0",
-    "gulp-shell": "^0.5.2",
-    "gulp-uglify": "~1.5.3",
-    "gulp-util": "~3.0.7",
-    "kss": "~2.0.2",
-    "tiny-lr": "~0.2.1",
-    "yargs": "~4.6.0",
+    "gulp-rimraf": "^0.2.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-shell": "^0.6.3",
+    "gulp-uglify": "~2.1.2",
+    "gulp-util": "^3.0.8",
+    "kss": "^2.0.2",
+    "tiny-lr": "^1.0.3",
+    "yargs": "^7.0.2",
     "prompt": "^1.0.0"
   },
   "devDependencies": {
-    "bundle-deps": "^1.0.0",
     "commitizen": "^2.8.6",
     "cz-conventional-changelog": "^1.2.0"
   },
