--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.6.3",
+    "gulp-svg-sprite": "^1.3.7",
+    "gulp-svgmin": "^1.2.4",
     "gulp-uglify": "~2.1.2",
     "gulp-util": "^3.0.8",
     "kss": "^2.0.2",
+    "prompt": "^1.0.0",
     "tiny-lr": "^1.0.3",
-    "yargs": "^7.0.2",
-    "prompt": "^1.0.0"
+    "yargs": "^7.0.2"
   },
   "devDependencies": {
     "commitizen": "^2.8.6",
