--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ node_js:
   - '4'
 before_install:
   - npm i -g npm@^2.0.0
+before_script:
+  - npm prune
+after_success:
+  - npm run semantic-release
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
