--- a/package.json
+++ b/package.json
@@ -56,4 +56,8 @@
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
   }
+  "engines" : {
+    "node" : ">=6.10",
+    "npm" : ">=5.4.0"
+  }
 }
