--- a/package.json
+++ b/package.json
@@ -61,5 +61,9 @@
   "engines" : {
     "node" : ">=6.10",
     "npm" : ">=5.4.0"
+  },
+  "release": {
+    "debug": false,
+    "branch": "master"
   }
 }
