--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "commit": "git-cz",
     "build": "node scripts/build.js",
+    "stylelint": "node scripts/stylelint.js",
     "images": "node scripts/images.js",
     "critial": "node scripts/critial.js",
     "styleguide": "node scripts/styleguide.js",
@@ -41,11 +42,14 @@
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.6.3",
+    "gulp-stylelint": "^5.0.0",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^1.2.4",
     "gulp-uglify": "~2.1.2",
     "gulp-util": "^3.0.8",
+    "install": "^0.10.1",
     "kss": "^2.0.2",
+    "npm": "^5.5.1",
     "prompt": "^1.0.0",
     "tiny-lr": "^1.0.3",
     "yargs": "^7.0.2"
