--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "kss": "^2.0.2",
     "npm": "^5.5.1",
     "prompt": "^1.0.0",
+    "stylelint": "^8.2.0",
     "stylelint-config-recommended": "^1.0.0",
+    "stylelint-config-sass-guidelines": "^3.1.0",
+    "stylelint-scss": "^2.1.0",
     "tiny-lr": "^1.0.3",
     "yargs": "^7.0.2"
   },
