--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "node scripts/build.js",
     "stylelint": "node scripts/stylelint.js",
     "images": "node scripts/images.js",
-    "critial": "node scripts/critial.js",
+    "critial": "node scripts/critial.js --site ",
     "styleguide": "node scripts/styleguide.js",
     "test": "echo No Tests",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
