--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,6 @@
 {
   "plugins": [
+    "stylelint-selector-bem-pattern",
     "stylelint-scss"
   ],
   "extends": "stylelint-config-sass-guidelines",
@@ -11,9 +12,12 @@
       "s",
       "%"
     ],
+    "selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$",
     "scss/dollar-variable-pattern": {
       "ignore": "global"
     },
-    "string-quotes": "double"
+    "string-quotes": "double",
+    "selector-max-id": 2,
+    "max-nesting-depth": 4
   }
 }
