--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "stylelint-config-recommended": "^1.0.0",
     "stylelint-config-sass-guidelines": "^3.1.0",
     "stylelint-scss": "^2.1.0",
+    "stylelint-selector-bem-pattern": "^2.0.0",
     "tiny-lr": "^1.0.3",
     "yargs": "^7.0.2"
   },
