--- a/.stylelintrc
+++ b/.stylelintrc
@@ -13,9 +13,8 @@
       "%"
     ],
     "selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$",
-    "scss/dollar-variable-pattern": {
-      "ignore": "global"
-    },
+    "scss/dollar-variable-pattern":".*",
+    "scss/at-mixin-pattern": ".*",
     "string-quotes": "double",
     "selector-max-id": 2,
     "max-nesting-depth": 4,
