fix(semantic-relase): fix semantic release script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "critial": "node scripts/critial.js --site ",
     "styleguide": "node scripts/styleguide.js",
     "test": "echo No Tests",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
