--- a/.stylelintrc
+++ b/.stylelintrc
@@ -12,7 +12,7 @@
       "s",
       "%"
     ],
-    "selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$",
+    "selector-class-pattern": ".*",
     "scss/dollar-variable-pattern":".*",
     "scss/at-mixin-pattern": ".*",
     "string-quotes": "double",
