--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "critial": "node scripts/critial.js --site ",
     "styleguide": "node scripts/styleguide.js",
     "test": "echo No Tests",
-    "semantic-release": "semantic-release",
-    "prepare": "patch-package"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -50,7 +49,6 @@
     "gulp-util": "^3.0.8",
     "install": "^0.10.1",
     "kss": "^3.0.0-beta.20",
-    "patch-package": "^5.1.1",
     "prompt": "^1.0.0",
     "stylelint": "^8.2.0",
     "stylelint-config-recommended": "^1.0.0",
