--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "gulp-changed": "^2.0.0",
     "gulp-concat": "~2.6.1",
     "gulp-cssmin": "^0.1.7",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-rename": "^1.2.2",
-    "gulp-replace-path": "^0.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^4.0.1",
     "gulp-shell": "^0.6.3",
