fix(stylelint): loosen order and qualifying type rules

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -18,6 +18,8 @@
     "string-quotes": "double",
     "selector-max-id": 2,
     "max-nesting-depth": 4,
-    "selector-max-compound-selectors": 5
+    "selector-max-compound-selectors": 5,
+    "selector-no-qualifying-type": false,
+    "order/properties-alphabetical-order": false
   }
 }
