feat(styleguide): convert to 3x

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "gulp-replace": "^1.0.0",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^4.0.1",
-    "gulp-shell": "^0.6.3",
     "gulp-stylelint": "^8.0.0",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^1.2.4",
@@ -48,6 +47,7 @@
     "gulp-util": "^3.0.8",
     "install": "^0.10.1",
     "kss": "^3.0.0-beta.20",
+    "path": "^0.12.7",
     "prompt": "^1.0.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^1.0.0",
