fix(stylelint): disable order and qualifying type rule

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -19,7 +19,7 @@
     "selector-max-id": 2,
     "max-nesting-depth": 4,
     "selector-max-compound-selectors": 5,
-    "selector-no-qualifying-type": false,
-    "order/properties-alphabetical-order": false
+    "selector-no-qualifying-type": null,
+    "order/properties-alphabetical-order": null
   }
 }
