--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "node scripts/build.js",
     "stylelint": "node scripts/stylelint.js",
     "images": "node scripts/images.js",
-    "critial": "node scripts/critial.js --site ",
+    "critical": "node scripts/critical.js --site ",
     "styleguide": "node scripts/styleguide.js",
     "test": "echo No Tests",
     "semantic-release": "semantic-release"
@@ -48,7 +48,6 @@
     "install": "^0.10.1",
     "kss": "^3.0.0-beta.20",
     "path": "^0.12.7",
-    "prompt": "^1.0.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^1.0.0",
     "stylelint-config-sass-guidelines": "^5.3.0",
@@ -61,7 +60,7 @@
     "ansi-regex": "^3.0.0",
     "commitizen": "^3.0.7",
     "cz-conventional-changelog": "^2.1.0",
-    "semantic-release": "^15.5.0"
+    "semantic-release": "^15.13.14"
   },
   "config": {
     "commitizen": {
