--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
 		"gulp-autoprefixer": "^6.1.0",
 		"gulp-changed": "^4.0.0",
 		"gulp-concat": "~2.6.1",
-		"gulp-cssmin": "^0.2.0",
 		"gulp-imagemin": "^5.0.3",
 		"gulp-rename": "^1.2.2",
 		"gulp-replace": "^1.0.0",
@@ -60,6 +59,7 @@
 		"ansi-regex": "^3.0.0",
 		"commitizen": "^3.1.1",
 		"cz-conventional-changelog": "^2.1.0",
+		"gulp-clean-css": "^4.2.0",
 		"semantic-release": "^15.13.18"
 	},
 	"config": {
