chore(package): Update name

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"type": "git",
 		"url": "https://github.com/epiqo/recruiter_epiq_deps.git"
 	},
-	"author": "Joao Garin <joao.garin@gmail.com> (https://joaogarin.com/)",
+	"author": "Joao Garin <joao.garin@jobiqo.com> (https://jobiqo.com/)",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/epiqo/recruiter_epiq_deps/issues"
