--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-changed": "^4.0.0",
     "gulp-concat": "~2.6.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
     "gulp-rimraf": "^0.2.1",
