--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
     "gulp-rimraf": "^0.2.1",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^5.0.1",
     "gulp-stylelint": "^8.0.0",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^2.2.0",
@@ -48,6 +48,7 @@
     "kss": "^3.0.1",
     "npm": "^7.16.0",
     "path": "^0.12.7",
+    "sass": "^1.52.1",
     "stylelint": "^13.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-sass-guidelines": "^7.1.0",
