--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,11 @@ jobs:
       - restore_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}
       - run:
+        name: "Install Node version"
+        command: "command: |
+          source /opt/circleci/.nvm/nvm.sh
+          nvm install ${VERSION_NODE}"
+      - run:
           name: "Install dependencies"
           command: "npm install"
       # save any changes to the cache
@@ -32,9 +37,6 @@ jobs:
           key: v1-deps-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
-      - run:
-          name: update-npm
-          command: "npm install -g npm@latest"
       - run: # run build
           name: build
           command: npm run build
