fix install node

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,12 @@ jobs:
           key: v1-deps-{{ checksum "package-lock.json" }}
       - run:
         name: "Install Node version"
-        command: "command: |
+        command: |
           source /opt/circleci/.nvm/nvm.sh
-          nvm install ${VERSION_NODE}"
+          nvm install ${VERSION_NODE}
+          # Make nvm available in next steps with desired node version
+          echo 'source /opt/circleci/.nvm/nvm.sh' >> $BASH_ENV
+          echo 'nvm use ${VERSION_NODE}' >> $BASH_ENV
       - run:
           name: "Install dependencies"
           command: "npm install"
