remove unsued packages

--- a/package.json
+++ b/package.json
@@ -55,14 +55,6 @@
   },
   "devDependencies": {
     "ansi-regex": "^3.0.0",
-    "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^2.1.0",
-    "gulp-clean-css": "^4.2.0",
-    "semantic-release": "^17.4.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+    "gulp-clean-css": "^4.2.0"
   }
 }
