--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,15 @@ version: 2.1
 jobs:
   build:
     machine:
-      image: ubuntu-2004:202201-02
+      image: ubuntu-2404:2024.11.1
     # Directory where steps will run. We use default "project" directory
     # to unify it for all jobiqo 8 projects
     working_directory: ~/project
     # Environment variables for all commands for easier control
     environment:
       VERSION_DOCKER_COMPOSE: 1.23.2
-      VERSION_NVM: 0.34.0
-      VERSION_NODE: 18.19.0
+      VERSION_NVM: 0.40.3
+      VERSION_NODE: 22.19.0
       VERSION_MKCERT: 1.4.1
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
