--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "gulp-svgmin": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "kss": "^3.1.0",
-    "node-sass": "^9.0.0",
     "path": "^0.12.7",
+    "sass": "^1.93.1",
     "stylelint": "^13.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-sass-guidelines": "^7.1.0",
