chore(circleci): Update nodejs version to 22.x (#67)

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "recruiter_epiq_deps",
-  "version": "5.0.26",
+  "version": "5.0.28",
   "description": "Dependencies for the epiq theme in Recruiter distribution",
   "main": "index.js",
   "scripts": {
     "build": "node scripts/build.js",
-    "stylelint": "node scripts/stylelint.js",
+    "stylelint": "stylelint 'node_modules/recruiter_epiq_deps/**/*.scss'",
     "images": "node scripts/images.js",
     "critical": "node scripts/critical.js --site ",
     "styleguide": "node scripts/styleguide.js",
@@ -25,33 +25,32 @@
   },
   "homepage": "https://github.com/epiqo/recruiter_epiq_deps#readme",
   "dependencies": {
-    "chalk": "^2.4.2",
-    "critical": "^6.0.4",
+    "chalk": "^5.6.2",
+    "critical": "^7.2.1",
     "es6-promise": "^4.2.8",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-changed": "^4.0.0",
+    "gulp": "^5.0.1",
+    "gulp-autoprefixer": "^10.0.0",
+    "gulp-changed": "^5.0.4",
     "gulp-concat": "~2.6.1",
-    "gulp-imagemin": "^7.0.0",
+    "gulp-imagemin": "^9.1.0",
     "gulp-livereload": "^4.0.2",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^1.0.0",
-    "gulp-rimraf": "^0.2.1",
-    "gulp-sass": "^5.1.0",
-    "gulp-stylelint": "^13.0.0",
+    "gulp-rename": "^2.1.0",
+    "gulp-replace": "^1.1.4",
+    "gulp-rimraf": "^1.0.0",
+    "gulp-sass": "^6.0.1",
     "gulp-svg-sprite": "^2.0.3",
     "gulp-svgmin": "^4.1.0",
+    "sass": "^1.77.0",
     "gulp-uglify": "^3.0.2",
     "kss": "^3.1.0",
-    "node-sass": "^9.0.0",
     "path": "^0.12.7",
-    "stylelint": "^13.0.0",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-sass-guidelines": "^7.1.0",
-    "stylelint-scss": "^3.18.0",
-    "stylelint-selector-bem-pattern": "^3.0.1"
+    "stylelint": "^16.25.0",
+    "stylelint-config-recommended": "^17.0.0",
+    "stylelint-config-sass-guidelines": "^12.1.0",
+    "stylelint-scss": "^6.12.1",
+    "stylelint-selector-bem-pattern": "^4.0.1"
   },
   "devDependencies": {
-    "gulp-clean-css": "^4.2.0"
+    "gulp-clean-css": "^4.3.0"
   }
 }
