--- a/package.json
+++ b/package.json
@@ -38,14 +38,16 @@
     "gulp-replace": "^1.1.4",
     "gulp-rimraf": "^1.0.0",
     "gulp-sass": "^6.0.1",
+    "gulp-stylelint-esm": "^3.0.0",
     "gulp-svg-sprite": "^2.0.3",
     "gulp-svgmin": "^4.1.0",
-    "sass": "^1.77.0",
+    "sass": "^1.93.3",
     "gulp-uglify": "^3.0.2",
     "kss": "^3.1.0",
     "path": "^0.12.7",
     "stylelint": "^16.25.0",
     "stylelint-config-recommended": "^17.0.0",
+    "stylelint-config-recommended-scss": "^16.0.2",
     "stylelint-config-sass-guidelines": "^12.1.0",
     "stylelint-scss": "^6.12.1",
     "stylelint-selector-bem-pattern": "^4.0.1"
