--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-concat": "~2.6.1",
     "gulp-imagemin": "^9.1.0",
     "gulp-livereload": "^4.0.2",
+    "gulp-postcss": "^10.0.0",
     "gulp-rename": "^2.1.0",
     "gulp-replace": "^1.1.4",
     "gulp-rimraf": "^1.0.0",
@@ -42,10 +43,11 @@
     "gulp-stylelint-esm": "^3.0.0",
     "gulp-svg-sprite": "^2.0.3",
     "gulp-svgmin": "^4.1.0",
-    "sass": "^1.93.3",
     "gulp-uglify": "^3.0.2",
     "kss": "^3.1.0",
     "path": "^0.12.7",
+    "postcss-prefix-selector": "^2.1.1",
+    "sass": "^1.93.3",
     "stylelint": "^16.25.0",
     "stylelint-config-recommended": "^17.0.0",
     "stylelint-config-recommended-scss": "^16.0.2",
